Fixed table header alignment.

--- a/public/css/codeable-custom-form-public.css
+++ b/public/css/codeable-custom-form-public.css
@@ -92,4 +92,5 @@
 
 #ccf-entry-details-table .ccf-entry-detail-row th {
 	width: 25%;
+	vertical-align: baseline;
 }
